# ChARGe

./: .gitignore  CLAUDE.md  pyproject.toml
charge/: _to_mcp.py
charge/clients/: agent_factory.py  agentframework.py  agentframework_utils.py  autogen.py  autogen_utils.py  client.py  openai_base.py
charge/experiments/: AgentFrameworkExperiment.py  Experiment.py  experiment.py  memory.py
charge/tasks/: task.py
examples/Multi_Server_Experiments/: main.py
examples/Multi_Turn_Chat/: main.py
examples/SSE_MCP/: main.py
tests/integration_tests/: test_agentframework_integration.py  test_autogen_openai_experiment.py  test_openai_simple_task.py
tests/unit_tests/: test_agentframework_configure.py  test_agentframework_memory.py  test_autogen_ChARGeListMemory.py  test_autogen_configure.py  test_tasks.py
