[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charge"
version = "0.1.0"
description = "SARGe: Scientific Automated Reasoning and Generation agentic framework"
#description = "ChARGe: sCientific Chemistry-tool for Automated Reasoning and Generation"
authors = []
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "mcp>=1.10.0",
    "jsonschema>=4.17.3",
    "loguru>=0.7.0",
    "pydantic>=2.10.7",
    "click",
    "pre-commit",
    "black",
]

# [tool.setuptools]
# packages = ["charge"]

[tool.setuptools.packages.find]
where = ["."]
include = ["charge*"]

# This creates the console script
# [project.scripts]
# charge-install = "charge.install:main"

[project.optional-dependencies]
ollama = ["ollama>=0.5.0"]
gemini = ["google-genai >=1.19.0"]
autogen = ["autogen-agentchat>=0.7.0", "autogen-core>=0.7.0", "autogen-ext>=0.7.0", "openai>=2.0.0", "tiktoken>=0.10.0", "autogen-ext[openai]"]
# Pin opentelemetry to a known good version
agentframework = ["agent-framework>=1.0.0rc1", "openai>=2.0.0", "tiktoken>=0.10.0", "opentelemetry-semantic-conventions-ai==0.4.13"]
test = ["pytest", "pytest-asyncio", "pytest-mock", "responses", "httpx", "requests-mock"]

# Define a set of optional packages for use when deploying persistent data services
pds = ["charge[autogen]"]

all = ["charge[ollama,gemini,autogen,agentframework]"]
